Fix header z-index

--- a/uncompiled_scss/styles/components/_header.scss
+++ b/uncompiled_scss/styles/components/_header.scss
@@ -5,7 +5,7 @@
         display: block;
         content: "";
         position: absolute;
-        z-index: 0;
+        z-index: 1;
         background: rgba(0, 0, 0, 0.4);
         top: 0;
         bottom: 0;
